# supervisely-format

./: .gitignore  Cargo.toml  LICENSE.en.txt  README.md
examples/: read_project.rs
src/: annotations.rs  dataset.rs  episode.rs  error.rs  geometry.rs  lib.rs  objects.rs  project.rs  project_meta.rs  related_images.rs  tags.rs  utils.rs
src/dataset/: classical.rs  image.rs  point_cloud.rs  point_cloud_episode.rs  video.rs
