[package]
name = "supervisely-format"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE.en.txt"
description = "A rust library with structs defined for supervisely objects"

[dependencies]
thiserror.workspace = true
hex_color = "1.0.0"
indexmap = "2.2.6"
itertools = "0.13.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
palette = "0.6.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0.114"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
