[package]
name = "supervisely-format"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.en.txt"
description = "A rust library with structs defined for supervisely objects"

[dependencies]
thiserror.workspace = true
hex_color = "1.0.0"
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.13.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
palette = "0.6.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
base64 = "0.22.1"
flate2 = { version = "1.0.34", features = ["zlib"] }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
